Feature:implement dynamic header background on scroll

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <header class="site_header">
       <div class="logo_container">
         <a href="#">
-          <img src="assets/images/logo.svg" />
+          <img class="logo" src="assets/images/logo.svg" />
         </a>
       </div>
-      <nav class="main_navigation">
+      <nav id="navigation" class="main_navigation">
         <ul class="menu_list">
           <li>
             <a href="#">მთავარი</a>
@@ -51,8 +51,12 @@
             მიმართულებით. წარმატებულ კურსდამთავრებულებს ეძლევათ შესაძლებლობა
             დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.
           </p>
+          <a href="#">
+            <span>გაიგე მეტი</span>
+          </a>
         </div>
       </section>
     </main>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
