--- a/index.html
+++ b/index.html
@@ -51,9 +51,176 @@
             მიმართულებით. წარმატებულ კურსდამთავრებულებს ეძლევათ შესაძლებლობა
             დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.
           </p>
-          <a href="#">
+          <a href="#" class="read_more_link">
             <span>გაიგე მეტი</span>
           </a>
+        </div>
+      </section>
+      <section class="learning_courses">
+        <h2>სასწავლო კურსები</h2>
+        <div class="courses_container">
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
+          <div class="course_box">
+            <div class="course_img">
+              <img
+                src="./assets/images/courses_images/ios_development.png"
+                alt="iOS Development"
+              />
+            </div>
+            <div class="course_text">
+              <h5 class="course_title text">iOS Development</h5>
+              <span class="registration_status text"
+                >რეგისტრაცია დასრულებულია</span
+              >
+            </div>
+            <div class="course_info">
+              <img src="./assets/images/arrow.svg" alt="arrow" />
+              <span>კურსის დეტალები</span>
+            </div>
+          </div>
         </div>
       </section>
     </main>
