Fix CSS styles in header, information section, and learning courses section

--- a/index.html
+++ b/index.html
@@ -15,214 +15,250 @@
   </head>
   <body>
     <header class="site_header">
-      <div class="logo_container">
-        <a href="#">
-          <img class="logo" src="assets/images/logo.svg" />
-        </a>
+      <div class="container header_container">
+        <div class="logo_container">
+          <a href="#">
+            <img class="logo" src="assets/images/logo.svg" />
+          </a>
+        </div>
+        <nav id="navigation" class="main_navigation">
+          <ul class="menu_list">
+            <li>
+              <a href="#">მთავარი</a>
+            </li>
+            <li>
+              <a href="#">TBC IT</a>
+            </li>
+            <li>
+              <a href="#">TBC x USAID</a>
+            </li>
+            <li>
+              <a href="#">რისკები</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav id="navigation" class="main_navigation">
-        <ul class="menu_list">
-          <li>
-            <a href="#">მთავარი</a>
-          </li>
-          <li>
-            <a href="#">TBC IT</a>
-          </li>
-          <li>
-            <a href="#">TBC x USAID</a>
-          </li>
-          <li>
-            <a href="#">რისკები</a>
-          </li>
-        </ul>
-      </nav>
     </header>
     <main class="main_container">
       <section class="banner_container">
-        <h3>TBC x USAID</h3>
-        <span>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</span>
+        <div class="container">
+          <h3>TBC x USAID</h3>
+          <span>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</span>
+        </div>
       </section>
       <section class="information_container">
-        <div class="info_box">
-          <p>
-            „ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა საინფორმაციო
-            ტექნოლოგიებით დაინტერესებულ ადამიანებს გთავაზობთ სრულად დაფინანსებულ
-            ონლაინ საგანმანათლებლო პრაქტიკულ კურსებს სხვადასხვა ICT
-            მიმართულებით. წარმატებულ კურსდამთავრებულებს ეძლევათ შესაძლებლობა
-            დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.
-          </p>
-          <a href="#" class="read_more_link">
-            <span>გაიგე მეტი</span>
-          </a>
+        <div class="container">
+          <div class="info_box">
+            <p>
+              „ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა
+              საინფორმაციო ტექნოლოგიებით დაინტერესებულ ადამიანებს გთავაზობთ
+              სრულად დაფინანსებულ ონლაინ საგანმანათლებლო პრაქტიკულ კურსებს
+              სხვადასხვა ICT მიმართულებით. წარმატებულ კურსდამთავრებულებს ეძლევათ
+              შესაძლებლობა დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.
+            </p>
+            <a href="#" class="read_more_link">
+              <span>გაიგე მეტი</span>
+            </a>
+          </div>
         </div>
       </section>
       <section class="learning_courses">
-        <h2>სასწავლო კურსები</h2>
-        <div class="courses_container">
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
-            </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
-            </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
-            </div>
+        <div class="container">
+          <div class="section_title">
+            <h2>სასწავლო კურსები</h2>
           </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
+
+          <div class="courses_container">
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/ios_development.png"
+                  alt="iOS Development"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">iOS Development</h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/react.jpg"
+                  alt="React course"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">React</h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/python.jpg"
+                  alt="iOS Development"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">Intro to Python</h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/advanced_python.jpg"
+                  alt="Intro to Python"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">Advanced Python</h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/advanced_cybersecurity.jpg"
+                  alt="Advanced Cybersecurity Course"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">
+                    Advanced Cybersecurity Course
+                  </h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/TOT.jpg"
+                  alt="ToT - Training of Trainers
+                "
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">ToT - Training of Trainers</h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/blockchain.jpg"
+                  alt="Blockchain"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">Blockchain</h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/devops.jpg"
+                  alt="DevOps"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">DevOps</h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
-            </div>
-          </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
-            </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
-            </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
-            </div>
-          </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
-            </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
-            </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
-            </div>
-          </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
-            </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
-            </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
-            </div>
-          </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
-            </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
-            </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
-            </div>
-          </div>
-          <div class="course_box">
-            <div class="course_img">
-              <img
-                src="./assets/images/courses_images/ios_development.png"
-                alt="iOS Development"
-              />
-            </div>
-            <div class="course_text">
-              <h5 class="course_title text">iOS Development</h5>
-              <span class="registration_status text"
-                >რეგისტრაცია დასრულებულია</span
-              >
-            </div>
-            <div class="course_info">
-              <img src="./assets/images/arrow.svg" alt="arrow" />
-              <span>კურსის დეტალები</span>
+            <div class="course_box">
+              <div class="course_img">
+                <img
+                  src="./assets/images/courses_images/information_security.jpg"
+                  alt="
+                Information Security Governance"
+                />
+              </div>
+              <div class="course_body">
+                <div class="course_text">
+                  <h5 class="course_title text">
+                    Information Security Governance
+                  </h5>
+                  <span class="registration_status text"
+                    >რეგისტრაცია დასრულებულია</span
+                  >
+                </div>
+                <div class="course_info">
+                  <img src="./assets/images/arrow.svg" alt="arrow" />
+                  <span>კურსის დეტალები</span>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
+      <section>slider</section>
     </main>
     <script type="module" src="script.js"></script>
   </body>
