Initiate FAQ section

--- a/index.html
+++ b/index.html
@@ -258,7 +258,22 @@
           </div>
         </div>
       </section>
-      <section>slider</section>
+      <section class="questions_section">
+        <div class="question_title">
+          <h2>ხშირად დასმული კითხვები</h2>
+        </div>
+        <div>
+          <div>
+            <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
+          </div>
+          <div>
+            <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
+          </div>
+          <div>
+            <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="script.js"></script>
   </body>
