Update styles in FAQ section

--- a/index.html
+++ b/index.html
@@ -258,19 +258,27 @@
           </div>
         </div>
       </section>
-      <section class="questions_section">
-        <div class="question_title">
-          <h2>ხშირად დასმული კითხვები</h2>
-        </div>
-        <div>
-          <div>
-            <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
+      <section class="faq_section">
+        <div class="container_faq">
+          <div class="faq_text">
+            <h2>ხშირად დასმული კითხვები</h2>
+            <a href="#" class="view_all">
+              <span>ყველა კითხვა</span>
+            </a>
           </div>
-          <div>
-            <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
-          </div>
-          <div>
-            <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
+          <div class="faq_list">
+            <div class="faq_item">
+              <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
+              <img src="./assets/images/downward-arrow.svg" />
+            </div>
+            <div class="faq_item">
+              <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
+              <img src="./assets/images/downward-arrow.svg" />
+            </div>
+            <div class="faq_item">
+              <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
+              <img src="./assets/images/downward-arrow.svg" />
+            </div>
           </div>
         </div>
       </section>
