FAQ Click Event Handling

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
           </div>
         </div>
       </section>
+      <section>slider</section>
       <section class="faq_section">
         <div class="container_faq">
           <div class="faq_text">
@@ -268,21 +269,95 @@
           </div>
           <div class="faq_list">
             <div class="faq_item">
-              <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
-              <img src="./assets/images/downward-arrow.svg" />
+              <div class="faq_question">
+                <h3>როგორ ხდება კურსებზე რეგისტრაცია და შერჩევა?</h3>
+                <img src="./assets/images/downward-arrow.svg" />
+              </div>
+              <article class="faq_answer">
+                <p>
+                  <span>
+                    კურსზე რეგისტრაციისთვის უნდა გაიარო რამდენიმე ეტაპი:
+                  </span>
+                </p>
+                <div class="info_about_course">
+                  <p>
+                    <span class="level"> I ეტაპი - </span>
+                    <span>
+                      პირველ ეტაპზე საჭიროა, შეავსო სასურველი კურსისთვის
+                      განკუთვნილი სარეგისტრაციო ფორმა, რომელიც განთავსებულია
+                      კურსის შიდა გვერდზე. კურსზე რეგისტრაციის დასრულების შემდეგ
+                      დაიწყება შემოსული განცხადებების გადარჩევა.</span
+                    >
+                  </p>
+                  <p>
+                    <span class="level">II ეტაპი - </span>
+                    <span
+                      >შერჩევის მეორე ეტაპი კურსების მიხედვით განსხვავებულია,
+                      ზოგიერთი კურსისთვის მოიცავს პრე-ტესტს, ზოგიერთ კურსზე კი
+                      უნარების ტესტს, სადაც მინიმალური ზღვარის გადალახვის
+                      შემთხვევაში გადახვალ შერჩევის შემდეგ ეტაპზე.</span
+                    >
+                  </p>
+                  <p>
+                    <span class="level"> III ეტაპი -</span>
+                    <span>
+                      მესამე ეტაპი კურსების მიხედვით განსხვავდება: Advance
+                      კურსებზე, სადაც მოითხოვება გარკვეული ტექნიკური ცოდნა,
+                      მონაწილეებმა უნდა დაწერონ ტექნიკური ტესტი ცოდნის დონის
+                      შესამოწმებლად, ხოლო კურსებზე, სადაც რაიმე ტიპის წინასწარი
+                      ცოდნა მოთხოვნილი არ არის უნდა შეასრულოთ ტექნიკური
+                      დავალება, რაც თქვენი კვლევისა და თვითსწავლის უნარს
+                      ამოწმებს.</span
+                    >
+                  </p>
+                  <p>
+                    <span class="level">IV ეტაპი -</span>
+                    <span>
+                      შერჩევის ბოლო მეოთხე ეტაპი მოიცავს გასაუბრებას შესარჩევ
+                      კომისიასთან. გასაუბრების წარმატებით გავლის შემთხვევაში
+                      ჩაირიცხებით კურსზე და გაფორმდება შესაბამისი
+                      ხელშეკრულება.</span
+                    >
+                  </p>
+                </div>
+                <p>
+                  * სანამ კურსზე დარეგისტრირდები მნიშვნელოვანია, ყურადღებით
+                  წაიკითხო კურსის აღწერა, ნახო რას ისწავლი კურსის განმავლობაში
+                  და გაიგო გააჩნია თუ არა კურსს დასწრების წინაპირობა.
+                </p>
+              </article>
             </div>
             <div class="faq_item">
-              <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
-              <img src="./assets/images/downward-arrow.svg" />
+              <div class="faq_question">
+                <h3>შემიძლია თუ არა ერთზე მეტ კურსზე რეგისტრაცია?</h3>
+                <img src="./assets/images/downward-arrow.svg" />
+              </div>
+              <article class="faq_answer">
+                <p>
+                  TBC X USAID ტექნოლოგიური განათლებისთვის პროგრამაში თითოეულ
+                  კანდიდატს აქვს მხოლოდ ერთი კურსის გავლის შესაძლებლობა. გარდა
+                  Information Security და Python კურსებისა, სადაც Basic დონის
+                  გავლის შემდეგ შესაძლებელია სწავლის გაგრძელება Advance დონეზე.
+                </p>
+              </article>
             </div>
             <div class="faq_item">
-              <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
-              <img src="./assets/images/downward-arrow.svg" />
+              <div class="faq_question">
+                <h3>რა ღირს სწავლა პროგრამის ფარგლებში?</h3>
+                <img src="./assets/images/downward-arrow.svg" />
+              </div>
+              <article class="faq_answer">
+                <p>
+                  პროგრამის ფარგლებში კურსებზე სწავლა სრულიად დაფინანსებულია
+                  თიბისი ბანკისა და USAID-ის მიერ.
+                </p>
+              </article>
             </div>
           </div>
         </div>
       </section>
     </main>
     <script type="module" src="script.js"></script>
+    <!-- <script type="module" src="questions.js"></script> -->
   </body>
 </html>
