--- a/index.html
+++ b/index.html
@@ -357,7 +357,35 @@
         </div>
       </section>
     </main>
+    <footer class="site_footer">
+      <div class="footer_container container">
+        <div class="footer_logos_container">
+          <div class="tbc_logo">
+            <img src="./assets/images/tbc-logo.png" alt="tbc logo" />
+          </div>
+          <div class="social_media_logos">
+            <img
+              class="facebook_logo"
+              src="./assets/images/facebook-logo.png"
+              alt="facebook logo"
+            />
+            <img src="./assets/images/youtube-logo.png" alt="youtube logo" />
+          </div>
+        </div>
+        <div class="footer_text">
+          <div class="copyright_terms_box">
+            <p>
+              <a href="https://fsymbols.com/copyright/"> &#169; 2023 </a> ყველა
+              უფლება დაცულია
+            </p>
+            <p class="terms_link">
+              <a href="#"> წესები და პირობები </a>
+            </p>
+          </div>
+          <a class="contact_link" href="your-contact-page.html">მოგვწერეთ</a>
+        </div>
+      </div>
+    </footer>
     <script type="module" src="script.js"></script>
-    <!-- <script type="module" src="questions.js"></script> -->
   </body>
 </html>
