update footer layout and styles

--- a/index.html
+++ b/index.html
@@ -357,35 +357,38 @@
         </div>
       </section>
     </main>
-    <footer class="site_footer">
-      <div class="footer_container container">
-        <div class="footer_logos_container">
-          <div class="tbc_logo">
-            <img src="./assets/images/tbc-logo.png" alt="tbc logo" />
+    <footer class="site-footer">
+      <div class="container">
+        <div class="footer-logos-container">
+          <div class="tbc-logo">
+            <img src="./assets/images/tbc-logo.png" alt="TBC Bank logo" />
           </div>
-          <div class="social_media_logos">
-            <img
-              class="facebook_logo"
-              src="./assets/images/facebook-logo.png"
-              alt="facebook logo"
-            />
-            <img src="./assets/images/youtube-logo.png" alt="youtube logo" />
+          <div class="social-media-logos">
+            <a href="https://www.facebook.com/tbcbank/">
+              <img
+                class="facebook-logo"
+                src="./assets/images/facebook-logo.png"
+                alt="Facebook logo"
+              />
+            </a>
+            <a href="https://www.youtube.com/channel/UCGk9R2LV2ywOL80r8Xc6xtQ">
+              <img src="./assets/images/youtube-logo.png" alt="YouTube logo" />
+            </a>
           </div>
         </div>
-        <div class="footer_text">
-          <div class="copyright_terms_box">
-            <p>
-              <a href="https://fsymbols.com/copyright/"> &#169; 2023 </a> ყველა
-              უფლება დაცულია
-            </p>
-            <p class="terms_link">
-              <a href="#"> წესები და პირობები </a>
-            </p>
+        <div class="footer-text">
+          <div class="copyright-terms-box">
+            <div class="copyright-box">
+              <a href="https://fsymbols.com/copyright/"> &#169; 2023 </a>
+              <span>ყველა უფლება დაცულია</span>
+            </div>
+            <a class="terms-link" href="#"> წესები და პირობები </a>
           </div>
-          <a class="contact_link" href="your-contact-page.html">მოგვწერეთ</a>
+          <a class="contact-link" href="your-contact-page.html">მოგვწერეთ</a>
         </div>
       </div>
     </footer>
+
     <script type="module" src="script.js"></script>
   </body>
 </html>
