make changes in  header layout, styles and functionality

--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
     <title>TBC x USAID</title>
   </head>
   <body>
-    <header class="site_header">
-      <div class="container header_container">
-        <div class="logo_container">
-          <a href="#">
-            <img class="logo" src="assets/images/logo.svg" />
-          </a>
-        </div>
-        <nav id="navigation" class="main_navigation">
-          <ul class="menu_list">
+    <header class="site-header">
+      <div class="header-container">
+        <a class="tbc-academy-logo" href="#" aria-label="Home">
+          <img src="assets/images/logo.svg" alt="TBC Academy Logo" />
+        </a>
+        <nav class="main-navigation">
+          <ul class="menu-list">
             <li>
               <a href="#">მთავარი</a>
             </li>
@@ -39,6 +37,7 @@
         </nav>
       </div>
     </header>
+
     <main class="main_container">
       <section class="banner_container">
         <div class="container">
