--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     <main class="main_container">
       <section class="banner_container">
         <div class="container">
-          <h3>TBC x USAID</h3>
+          <div class="banner-title">
+            <h3>TBC x USAID</h3>
+          </div>
           <span>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</span>
         </div>
       </section>
@@ -388,6 +390,6 @@
       </div>
     </footer>
 
-    <script type="module" src="script.js"></script>
+    <script type="module" src="scripts/script.js"></script>
   </body>
 </html>
