make changes in information section layout and styles

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
     </header>
 
-    <main class="main_container">
-      <section class="banner_container">
+    <main class="main-container">
+      <section class="banner-container">
         <div class="container">
           <div class="banner-title">
             <h3>TBC x USAID</h3>
@@ -47,9 +47,9 @@
           <span>ᲢᲔᲥᲜᲝᲚᲝᲒᲘᲣᲠᲘ ᲒᲐᲜᲐᲗᲚᲔᲑᲘᲡᲗᲕᲘᲡ</span>
         </div>
       </section>
-      <section class="information_container">
+      <section class="information-container">
         <div class="container">
-          <div class="info_box">
+          <div class="course-description">
             <p>
               „ TBC x USAID - ტექნოლოგიური განათლებისთვის “ პროგრამა
               საინფორმაციო ტექნოლოგიებით დაინტერესებულ ადამიანებს გთავაზობთ
@@ -57,8 +57,8 @@
               სხვადასხვა ICT მიმართულებით. წარმატებულ კურსდამთავრებულებს ეძლევათ
               შესაძლებლობა დასაქმდნენ თიბისისა და მის პარტნიორ კომპანიებში.
             </p>
-            <a href="#" class="read_more_link">
-              <span>გაიგე მეტი</span>
+            <a href="#" class="read-more-link">
+              <span>გაიგე მეტი </span>
             </a>
           </div>
         </div>
